--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "heatmap.js": "^2.0.5",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
