--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "heatmap.js": "^2.0.5",
     "next": "^15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
