get player positions with upload

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "heatmap.js": "^2.0.5",
     "next": "^15.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
